[package]
name = "wasm-website-frontend"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }
jsx_macro = { path = "../jsx_compiler/jsx_macro" }
jsx_types = { path = "../jsx_compiler/jsx_types" }
smithy = { path = "../smithy" }
web-sys = { version = "0.1", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "EventTarget",
  "Node",
  "NodeList"
] }

[patch.crates-io]
web-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
js-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }
