[package]
name = "wasm-website-frontend"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.24", features = ["nightly"] }
jsx_macro = { path = "../jsx_compiler/jsx_macro" }
jsx_types = { path = "../jsx_compiler/jsx_types" }
smithy = { path = "../smithy" }
web-sys = { version = "0.3.1", features = [
  "Document",
  "DocumentFragment",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "Event",
  "UiEvent",
  "KeyboardEvent",
  "FocusEvent",
  "MouseEvent",
  "PointerEvent",
  "InputEvent",
  "EventTarget",
  "Node",
  "NodeList",
  "console"
] }

[patch.crates-io]
web-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
js-sys = { git = 'https://github.com/rustwasm/wasm-bindgen' }
wasm-bindgen = { git = 'https://github.com/rustwasm/wasm-bindgen' }

[profile.dev]
# uncomment these when building for prod...
# debug = false
# opt-level = 'z'

# N.B. lto cannot be enabled, yet?
